--- a/wiki_main.html
+++ b/wiki_main.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index_style.css">
+    <link rel="icon" href="img/Toybox Logo.png">
 </head>
 
 <body>
@@ -48,7 +49,70 @@
     <header></header>
 
     <main>
-        
+        <h1 class="section_heading">Wiki</h1>
+        <p class="section_parag">
+            Here players may research all of the content that our project has to offer.
+            If you feel like any content is missing or unclear, please do let us know
+            appropriately in our <a href="https://www.minecraft.net/en-us" class="text_link">discord server</a>.
+            <br><br>
+            Access any of the sections below by clicking on their respective title or image.
+        </p>
+
+        <div class="left_preview">
+            <a class="text_link" href="wiki/vanilla_changes.html" target="_blank"><img src="img/preview_0.png" alt=""></a>
+            <a class="text_link" href="wiki/vanilla_changes.html" target="_blank"><h2>Vanilla Changes</h2></a>
+            <p>
+                To ensure the best experience for our players, and to make sure that our
+                content mixes well with the Minecraft gamespace, we have adjusted many
+                recipes and item obtainment methods, alongside adding new functionality
+                to some items that previously lacked it.
+            </p>
+        </div>
+
+        <div class="left_preview">
+            <a class="text_link" href="wiki/entities.html" target="_blank"><img src="img/preview_1.png" alt=""></a>
+            <a class="text_link" href="wiki/entities.html" target="_blank"><h2>Entities</h2></a>
+            <p>
+                A plethora of creatures have invaded the many worlds we call home!
+                Hunt, tame, or even work alongside the numerous entities that inhabit
+                these lands, but be careful, as one wrong step might be the end of
+                your life!
+            </p>
+        </div>
+
+        <div class="left_preview">
+            <a class="text_link" href="wiki/blocks.html" target="_blank"><img src="img/preview_2.png" alt=""></a>
+            <a class="text_link" href="wiki/blocks.html" target="_blank"><h2>Blocks & Furniture</h2></a>
+            <p>
+                Home is where the heart is, so every home deserves to be just as
+                beautiful as the heart living inside! Explore the many colorful and
+                delicately crafted building resources, all right at your fingertips
+                for creating a masterpiece!
+            </p>
+        </div>
+
+        <div class="left_preview">
+            <a class="text_link" href="wiki/foods.html" target="_blank"><img src="img/preview_3.png" alt=""></a>
+            <a class="text_link" href="wiki/foods.html" target="_blank"><h2>Food & Drink</h2></a>
+            <p>
+                With all of the confusion in the world, why not take a moment to relax
+                with a cold drink and a warm meal? With the multitude of accessible
+                food related resources, no player will get exhausted of having to eat
+                the same meal over and over again!
+            </p>
+        </div>
+
+        <div class="left_preview">
+            <a class="text_link" href="wiki/equipment.html" target="_blank"><img src="img/preview_4.png" alt=""></a>
+            <a class="text_link" href="wiki/equipment.html" target="_blank"><h2>Equipment</h2></a>
+            <p>
+                As if the consequences of the industrial revolution weren't enough
+                already, we found a way to add even more spice into reshaping the world
+                you inhabit! If one person can turn over a continent with a shovel,
+                imagine what a jackhammer does!
+            </p>
+        </div>
+
         <hr>
         <footer>
             Website created courtesy of The ToyBox Project's development team.<br>
