--- a/wiki/entities.html
+++ b/wiki/entities.html
@@ -12,14 +12,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index_style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/index_style.css">
+    <link rel="icon" href="../img/Toybox Logo.png">
 </head>
 
 <body>
     <aside>
         <div class="sidebar_container">
-            <img class="sidebar_content" src="img/Toybox Logo.png" alt="The Toybox Project's Cat Logo/Mascot">
+            <img class="sidebar_content" src="../img/Toybox Logo.png" alt="The Toybox Project's Cat Logo/Mascot">
 
             <a href="https://minecraft.wiki" target="_blank" class="button_link">
                 <button class="sidebar_button sidebar_content">🔍 _____________</button>
