--- a/wiki/foods/burger.html
+++ b/wiki/foods/burger.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index_style.css">
+    <link rel="icon" href="img/Toybox Logo.png">
 </head>
 
 <body>
