idk something important prolly

--- a/credits.html
+++ b/credits.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index_style.css">
+    <link rel="stylesheet" href="css/credits_style.css">
     <link rel="icon" href="img/Toybox Logo.png">
 </head>
 
@@ -49,6 +49,89 @@
     <header></header>
 
     <main>
+        <div class="credits_container">
+            <img src="img/credits/plus-icon.png">
+            <h1>DEVELOPMENT TEAM</h1><br><br>
+
+            <div class="credits_open">
+                <img src="img/credits/exmodeus.png" alt="">
+                <br>
+                <h2>ZeroSorrows</h2>
+
+                <p>
+                    Founder of The ToyBox
+                </p>
+                <hr>
+            </div>
+            <div class="credits_open">
+                <img src="img/credits/ssubnoir.png" alt="">
+                <br>
+                <h2>SSubnoir</h2>
+                <p>
+                    Mod and Website Developer
+                </p>
+                <hr>
+            </div>
+            <div class="credits_open">
+                <img src="img/credits/furgusfitz.png" alt="">
+                <br>
+                <h2>Furgus Fitz</h2>
+                <p>
+                    Mod Testing & Development
+                </p>
+                <hr>
+            </div>
+            <div class="credits_open">
+                <img src="img/credits/tornadosandstorm.png" alt="">
+                <br>
+                <h2>Tornado Sandstorm</h2>
+                <p>
+                    Mod Testing & Development
+                </p>
+                <hr>
+            </div>
+        </div>
+
+        <div class="credits_container">
+            <img src="img/credits/plus-icon.png">
+            <h1>ARTISTRY TEAM</h1><br><br>
+
+            <div class="credits_open">
+                <img src="img/credits/thy_overlord.png" alt="">
+                <br>
+                <h2>Thy Overlord</h2>
+
+                <p>
+                    2D & 3D Artist
+                </p>
+                <hr>
+            </div>
+            <div class="credits_open">
+                <img src="img/credits/simplekarma.png" alt="">
+                <br>
+                <h2>Simple Karma</h2>
+                <p>
+                    2D & 3D Artist
+                </p>
+                <hr>
+            </div>
+        </div>
+
+        <div class="credits_container">
+            <img src="img/credits/plus-icon.png">
+            <h1>PLAYTESTING TEAM</h1><br><br>
+
+            <div class="credits_open">
+                <img src="img/credits/storm_ragez.png" alt="">
+                <br>
+                <h2>Storm Ragez</h2>
+
+                <p>
+                    Minecraft Combat Veteran
+                </p>
+                <hr>
+            </div>
+        </div>
         
         <hr>
         <footer>
